--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 bin/root_cmp
+sample_root_files/fx1_med.root
+sample_root_files/fx2_med.root
+sample_root_files/r1_med.root
+sample_root_files/r2_med.root
 ~*
