--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,9 +3,11 @@ FROM centos
 MAINTAINER Charles Zheng 
 
 # Required software
-RUN yum install -y gcc wget gcc-c++ unzip make numpy
+RUN yum install -y gcc wget gcc-c++ unzip make numpy 
 # Required libs
 RUN yum install -y libSM libX11 libXext libXpm libXft
+# Install vim  
+RUN yum install -y vim
 # Get root 6.04 binary
 RUN wget https://root.cern.ch/download/root_v6.04.16.Linux-centos7-x86_64-gcc4.8.tar.gz -O /root/root.tar.gz
 RUN cd /root && tar -xzf root.tar.gz && rm root.tar.gz
@@ -26,7 +28,7 @@ ENV CMAKE_PREFIX_PATH /root/root
 # Get root_diff
 RUN wget https://github.com/charleszheng44/root_diff/archive/master.zip -O /root/root-diff.zip
 RUN cd /root && unzip root-diff.zip && rm root-diff.zip
-RUN cd /root/root_diff-master && make
+RUN mv /root/root_diff-master /root/root_diff && cd /root/root_diff && make
 
 # Set default working dir
 WORKDIR /root
