--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
 *.log
 bin/*
-sample_root_files/fx1_med.root
-sample_root_files/fx2_med.root
-sample_root_files/r1_med.root
-sample_root_files/r2_med.root
+sample_root_files/*.root
 ~*
